PMCs Loc & Icons

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -49,6 +49,9 @@ v1.10.2
   - Fixed a localization error where the Hezbollah Border War with Israel would give you Shia related descriptions despite being Israel
   - Fixed bug that Chinese didn't have SPAA in 2000s
   - Fixed Polish military tech boosts not working with NSB and BBA dlcs
+  - Fixed French CNES popularity public support
+  - Fixed Kosovo focus making you get negative euroscepticism
+  - Fixed the Keystone Pipeline instantly finishing
 
  Content:
   - New building "Commercialized Agriculture District"
@@ -69,8 +72,10 @@ v1.10.2
  Graphics:
   - Enlarged previously broken diplo actions backgrounds so that they fit the buttons accurately
   - Added event images to the European Union events
+  - Added missing icons for the Private Military Companies in the International System screen
 
  Localization:
+  - Added descriptions to the remaining Private Military Companies
   - Major fixes and improvements to the Russian localization
 
  Modding Resources:
