--- a/localisation/english/MD_focus_FRA_l_english.yml
+++ b/localisation/english/MD_focus_FRA_l_english.yml
@@ -652,6 +652,7 @@
  FRA_french_canadian_TT1: "§YFrench Canadian Happiness is Boosted due to French helping the Canadian government.§!\n"
  FRA_french_canadian_TT2: "§YFrench Canadian Happiness is Lowered due to the French supporting the Quebecers.§!\n"
  FRA_idea_development_investment_tt: "Modifies $investment_cost_modifier$ and $investment_duration_modifier$ by §G5%§! for investments from §C[FRA.GetNameWithFlag]§!\n"
+ FRA_preparing_launch: "Preparing French ISS Launch"
 
  # Ideas
  FRA_idea_the_francosphere: "The Francosphere"
