--- a/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
+++ b/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
@@ -1712,7 +1712,7 @@
  ##########Decisions##########
  KOS_albania_union: "Kosovo-Albania"
  KOS_albania_union_desc: "\n\n\n\n\n\n£KOS_desctext_albans\n\n\n\n\n\n\n\n\nThe majority of people living within Kosovo are §HAlbanian§![ALB.GetFlag]. This makes our ties with the nation state of §HAlbania§![ALB.GetFlag] very strong, and therefore, we must try our best to §Cunify§! with them as §Cone state§!. If we are able to §Hunify§! with the Albanians[ALB.GetFlag], we will be able to assert our interests as a §Hregional power§!, rather than just being another battleground for foreign powers.\n\nDespite our population being mainly §HAlbanian§![ALB.GetFlag], we still hold a small minority of §HSerbs§! in our country, which will actively try and §Rprevent our unification§! with §HAlbania§![ALB.GetFlag]. We are going to have to appease them through some decisions made available through this tab, or through focuses within the focus tree. §HSerbian opinion§! can fluctuate randomly, so we must be vary of that.\n\nWe will not be able to unify with §HAlbania§![ALB.GetFlag] for as long as we are not a recognized state.\n\n§HKosovo-Albania Unity[KOS.GetFlag][ALB.GetFlag]§! is at §Y[?KOS_albania|%]§!\n\n§G[?KOS_serbs|%]§! of §HSerbs§! in Kosovo[KOS.GetFlag] have a favorable view of us"
- KOS_unity_boost: "§YBoost§! unity"
+ KOS_unity_boost: "§YBoost§! Unity"
  KOS_appease_serbs: "§YAppease§! [SER.GetFlag]the Serbs"
  KOS_unify: "§YRequest§! Unification"
  KOS_int_recognition: "Struggle for Recognition"
@@ -1856,7 +1856,7 @@
  KOS_police: "Kosovo Police"
  KOS_police_desc: "The Kosovo Police is the national policing law enforcement agency of Kosovo. It consists of five departments and eight regional directorates and is represented at the political level by the Ministry of Internal Affairs and Public Administration of the Republic of Kosovo."
  KOS_siu: "Department of Operations"
- KOS_siu_desc: "The Department of Operations is the main department of the Kosovo Police and employs the bulk of its members. It is headed by the director of the Department of Operations and consists of three divisions: The Division of Public Safety, the Road Traffic Division, and the Specialized Units Division. The first two form the backbone of the Kosovo Police and deal with issues such as general policing operations, prevention of petty crime, community policing, and road safety. The specialized units support the other two divisions, and they additionally engage in close-protection to VIPs and diplomats, protection of objects with special importance, anti-terrorism operations, and riot control."
+ KOS_siu_desc: "The Department of Operations is the main department of the Kosovo Police and employs the bulk of its members. It is headed by the director of the Department of Operations and consists of three divisions: The Division of Public Safety, the Road Traffic Division, and the Specialized Units Division. The first two form the backbone of the Kosovo Police and deal with issues such as general policing operations, prevention of petty crime, community policing, and road safety. The specialized units support the other two divisions, and they additionally engage in close protection to VIPs and diplomats, protection of objects with special importance, anti-terrorism operations, and riot control."
  KOS_kpc: "Kosovo Protection Corps"
  KOS_kpc_desc: "We will reorganize our old combat units into a new one - Kosovo Protection Corps"
  KOS_american_advisors: "American Advisors"
@@ -1866,7 +1866,7 @@
  KOS_deploy_the_army: "Deploy the Army"
  KOS_deploy_the_army_desc: "Because of our many reforms and changes, we are able to very easily deploy newly trained soldiers for the sake of Kosovo's defense!"
  KOS_the_serbians: "The Serbians"
- KOS_the_serbians_desc: "The Serbians have been a thorn in our side for sometime now, but we can either cooperate with them, or pursue hostile relations"
+ KOS_the_serbians_desc: "The Serbians have been a thorn in our side for some time now, but we can either cooperate with them or pursue hostile relations"
  KOS_never_forgive: "Never Forgive"
  KOS_never_forgive_desc: "We will never accept the existence of Serbia and their claims to slavery over us"
  KOS_fund_montenegro_rebels: "Fund Montenegrin Rebels"
@@ -1884,9 +1884,10 @@
  KOS_military_partners: "Military Partners"
  KOS_military_partners_desc: "We will develop a military partnership with the Serbian army"
  KOS_democratic_agenda: "Democratic Agenda"
- KOS_democratic_agenda_desc: "The Democratic Party of Kosovois one of the largest political parties in Kosovo. It was originally a social-democratic party coming out of the demilitarised Kosovo Liberation Army after the Kosovo War, with most of the leadership coming from Albanian nationalists and former members of the People's Movement of Kosovo"
+ KOS_democratic_agenda_desc: "The Democratic Party of Kosovo is one of the largest political parties in Kosovo. It was originally a social-democratic party coming out of the demilitarised Kosovo Liberation Army after the Kosovo War, with most of the leadership coming from Albanian nationalists and former members of the People's Movement of Kosovo"
  KOS_europeanization: "Europeanization"
  KOS_europeanization_desc: "Only the path to the European Community is a priority for us and we will follow this path to the end"
+ KOS_europeanization_tt: "We will become a §C[EUU.GetNameWithFlag]§! Candidate\n"
  KOS_call_for_investments: "Call for Investments"
  KOS_call_for_investments_desc: "Our small region needs foreign investment to pull the economy from the bottom"
  KOS_job_opportunities: "Create Job Opportunities"
@@ -1902,7 +1903,7 @@
  KOS_values_of_freedom: "Values of Freedom"
  KOS_values_of_freedom_desc: "Freedoms and human rights will be declared the main values for us"
  KOS_pdk: "PDK"
- KOS_pdk_desc: "The Democratic Party of Kosovo  is one of the largest political parties in Kosovo. It was originally a social-democratic party coming out of the demilitarised Kosovo Liberation Army after the Kosovo War, with most of the leadership coming from Albanian nationalists and former members of the People's Movement of Kosovo."
+ KOS_pdk_desc: "The Democratic Party of Kosovo is one of the largest political parties in Kosovo. It was originally a social-democratic party coming out of the demilitarised Kosovo Liberation Army after the Kosovo War, with most of the leadership coming from Albanian nationalists and former members of the People's Movement of Kosovo."
  KOS_push_for_albanian_unity: "Push for Albanian Unity"
  KOS_push_for_albanian_unity_desc: "Albanians and I are fraternal and kindred peoples and we will promote this political narrative"
  KOS_military_funding: "Military Funding"
@@ -2128,13 +2129,13 @@
  KOS_SER_opinion_increase_2: "§H2%§! of §HSerbs§! will have a §Gfavorable§! view of us"
  KOS_SER_opinion_decrease_2: "§H2%§! of §HSerbs§! will have a §Rless favorable§! view of us"
  KOS_boost_unity: "Will §Hboost unity§! by §G2%§!"
- KOS_serb_opinion: "§HSerb opinion§! is at §G50%§! or more"
+ KOS_serb_opinion: "§HSerb Opinion§! is at §G50%§! or more (Current §HSerb Opinion§!: [?KOS_serbs|0%])"
  KOS_unit_un: "Will create §H1 U.N. Peacekeeping Unit§!"
  KOS_boost_unity_5: "Will §Hboost unity with Albania§! by §G5%§!"
  KOS_russia_will_recognize: "§HRussia§! will §Grecognize§! us as a country!"
  KOS_all_recognize: "§HWe are recognized by all 9 regional powers§!"
  KOS_try_again: "§HWe can send another request in 100 days§!"
- KOS_tooltip_unify: "§HKosovo-Albania§! unity is at §G100%§!"
+ KOS_tooltip_unify: "§HKosovo-Albania§! Unity is at §G100%§! (Current §HKosovo-Albania§! Unity: [?KOS_serbs|0%])"
  KOS_heavly_land_mined: "Many Abandoned Mines"
  kla_support: "Supports Us With the KLA"
  albanian_speaking: "Albanian Speaking Nation"
