--- a/localisation/english/MD_international_l_english.yml
+++ b/localisation/english/MD_international_l_english.yml
@@ -31,6 +31,11 @@
  campaign_FRA_button_text: "Ask for [FRA.GetName] [FRA.GetFlag] Support"
  campaign_ENG_button_text: "Ask for [ENG.GetName] [ENG.GetFlag] Support"
  un_ascension_button_tt: "Become UN Member State"
+ switch_recog_button_text: "Switch Recognition"
+ pressure_countries_recog_button_text: "Pressure Countries"
+ grant_recog_button_text: "Grant Recognition"
+ rescind_recog_button_text: "Rescind Recognition"
+
 
  # Private Military Companies Section
  PMC_company_button_tt: "[name_of_corp_desc]\n-----------\n§YPrerequisites:§!\n[!name_of_pmc_companies_button_click_enabled]\n§YEffects:§!\n[!name_of_pmc_companies_button_click]"
@@ -45,6 +50,22 @@
  has_hired_tt: "Has hired this type of unit from the selected company"
  pmc_open_units_list: "This will open the unit selection list for this company."
  pmc_upgrade_tt: "§YThis company is upgraded enough to support this type of unit.§!"
+ light_inf_loc: "Light Infantry"
+ mot_inf_loc: "Motorized Infantry"
+ mech_inf_loc: "Mechanized Infantry"
+ hvy_mech_inf_loc: "Heavy Mechanized Infantry"
+ spc_inf_loc: "Specialized Infantry"
+ tank_loc: "Tank Unit"
+ spec_op_loc: "Special Operations Infantry"
+ remove_light_inf_button_text: "Remove Light Infantry"
+ remove_mot_inf_button_text: "Remove Mot. Infantry"
+ remove_mech_inf_button_text: "Remove Mech. Infantry"
+ remove_heavy_mech_inf_button_text: "Remove Heavy Mech. Infantry"
+ remove_special_infantry_text: "Remove Special Infantry"
+ remove_tank_unit_text: "Remove Tank Unit"
+ remove_sf_inf_button_text: "Remove SOF Infantry"
+
+ # PMC Icons
  PMC_blackwater_loc: "£blackwater_button"
  PMC_aegis_loc: "£aegis_button"
  PMC_constellis_loc: "£costellis_button"
@@ -63,7 +84,6 @@
  PMC_asgaarg_loc: "£asgaarg_button"
  PMC_dewe_loc: "£dewe_button"
  PMC_gard_loc: "£gard_button"
- PMC_gaz_loc: "£gaz_button"
  PMC_iron_loc: "£iron_button"
  PMC_lukoil_loc: "£lukoil_button"
  PMC_over_loc: "£over_button"
@@ -71,15 +91,16 @@
  PMC_redut_loc: "£redut_button"
  PMC_rosneft_loc: "£rosneft_button"
  PMC_sherbank_loc: "£sberbank_button"
- PMC_union_loc: "£union_button"
  PMC_vtb_loc: "£vtb_button"
  PMC_md_loc: "£md_button"
- PMC_asgard_loc: "£"
- PMC_sinai_loc: "£"
- PMC_front_loc: "£"
- PMC_gazprom_loc: "£"
- PMC_sheriff_loc: "£"
- PMC_sberbank_loc: "£"
+ PMC_asgard_loc: "£asgaard_button"
+ PMC_sinai_loc: "£union_button"
+ PMC_front_loc: "£front_button"
+ PMC_gazprom_loc: "£gaz_button"
+ PMC_sheriff_loc: "£sheriff_button"
+ PMC_sberbank_loc: "£sberbank_button"
+
+ # PMC Names
  PMC_md_name: "MD Military Bois"
  PMC_blackwater_name: "Blackwater"
  PMC_aegis_name: "Aegis"
@@ -91,14 +112,14 @@
  PMC_sandline_name: "SandLine"
  PMC_kbr_name: "KBR Logistics"
  PMC_nirtal_name: "Nirtal Specialists"
- PMC_halo_name: "HALO"
+ PMC_halo_name: "The HALO Trust"
  PMC_defense_name: "Defense Conseil International"
  PMC_gardaworld_name: "GardaWorld"
  PMC_esa_name: "European Security Academy"
  PMC_g4s_name: "G4S" # ITT
- PMC_asgard_name: "Asgard"
+ PMC_asgard_name: "Asgaard - German Security Group"
  PMC_sinai_name: "The Union of the Tribes of Sinai"
- PMC_gard_name: "Gard"
+ PMC_gard_name: "Gardservis"
  PMC_patriot_name: "Patriot"
  PMC_dewe_name: "Dewe Security Services"
  PMC_over_name: "China Overseas Group Security"
@@ -112,56 +133,40 @@
  PMC_sberbank_name: "Sberbank"
  PMC_vtb_name: "VTB"
  name_of_corp_tt: "§Y[name_of_corp]§!"
+
+ # PMC Descriptions
  PMC_blackwater_name_desc: "Blackwater is an American Private Military Contractor founded in late 1996 by former USN Seal, Erik Prince. The company provides a variety of services such as law enforcement training, close-quarter combat training, and security services."
  PMC_aegis_name_desc: "Aegis, fully Aegis Defense Services, is a British private military founded by Tim Spicer who was previously CEO of Sandline International with co-founders Jeffrey Day, Dominic Armstrong, and Mark Bullough. Some of the services provided are security services, law enforcement training, and logistical support and reconstruction efforts."
- PMC_constellis_name_desc: "Constellis"
+ PMC_constellis_name_desc: "Constellis is the name of the American-based private military company formed from a merger of Blackwater and merged with Triple Canopy to form Constellis Holdings."
  PMC_wagner_name_desc: "Wagner Group, officially known as PMC Wagner, is a Russian state-funded private military contractor formed by Yevgeny Prigozhin. The Wagner Group is most notable for its recruitment of prison inmates for their combat sections and conducts operations in multiple countries all across the world."
  PMC_md_name_desc: "The private military company of MD Military Bois was formed sometime in the 21st century. Their origins are unknown but the members of the PMC hail from a wide variety of countries ranging from America, Switzerland, Germany, China, and Russia making them one of the most equipment-diverse and multi-ethnic PMCs available on the global stage. They are widely considered some of the best mercenaries to hire due to high morale, coordination and their ability to use a multitude of weapon platforms."
  PMC_mpri_name_desc: "MPRI (a.k.a L3-MPRI) is an American-based global Private Military Contractor founded in 1987 by eight former senior military leaders of the American military, including Carl Vuono a former joint Chief of Staff. The company provides a multitude of different services ranging from logistics, military training, law enforcement training, aircraft modernization and maintenance, electronic systems, and electronic warfare. It played an active role in Operation Desert Storm and shortly thereafter became a world-renowned global PMC with contracts in nations such as Croatia, Bosnia, Equatorial Guinea, Colombia and more."
- PMC_sadat_name_desc: "SADAT Specialists"
- PMC_rsb_name_desc: "RSB-Group"
+ PMC_sadat_name_desc: "SADAT Specialists is a Turkish private military company based out of Istanbul. Founded in 2012, the company operates within the Middle East providing a variety of contractor services such as military, ordnance procurement, and defense consulting."
+ PMC_rsb_name_desc: "RSB-Group is a Russian-based military consulting company that provides a variety of services but mainly combat forces, training, logistics and a well-trained officer corps."
  PMC_sandline_name_desc: "SandLine International is a London-based PMC formed and established in the 1990s by Tim Spicer. SandLine was involved in several conflicts in the 90s with one such conflict being Papua New Guinea. Similarly to other PMCs SandLine operated services related to military training, and security detail as well as uniquely operational support which included equipment and arms procurement and diplomatic support for their contract holders."
- PMC_kbr_name_desc: "KBR Logistics"
- PMC_nirtal_name_desc: "Nirtal Specialists"
- PMC_halo_name_desc: "HALO"
+ PMC_kbr_name_desc: "KBR Logistics is a logistics-based private military contractor which is most notable for its involvements in logistical support for the United States and other NATO and NATO-aligned partners."
+ PMC_nirtal_name_desc: "Nirtal Specialists was founded in 1995 as a global private security company that specializes in combat training, close protection services and security consultations."
+ PMC_halo_name_desc: "The Halo Trust, founded in 1988, is a non-profit humanitarian organization that specializes in the removal of ordnance in war-torn areas to remove landmines in a safe and effective manner. They petition governments to continue the practice to ensure the safety of future generations. Some of their work has been done in Mozambique, Kosovo, Somalia, Afghanistan and many other countries."
  PMC_defense_name_desc: "Defense Conseil International"
  PMC_gardaworld_name_desc: "GardaWorld is a Canadian private security firm by Stephan Crétier which runs security guard services and armoured car services globally. The company held contracts with several nations around the globe providing security services to embassies, banks, government buildings, and other venues."
  PMC_esa_name_desc: "The European Security Academy was formed in 1992 by Andrzej Bryl providing services to maritime protection, first aid, shooting and more. Furthermore, the company has trained many special units in the European Union amongst police and military forces of the European Union."
- PMC_g4s_name_desc: "G4S" # ITT
- PMC_asgard_name_desc: "Asgard"
- PMC_sinai_name_desc: "The Union of the Tribes of Sinai"
- PMC_gard_name_desc: "Gard"
- PMC_patriot_name_desc: "Patriot"
- PMC_dewe_name_desc: "Dewe Security Services"
- PMC_over_name_desc: "China Overseas Group Security"
- PMC_front_name_desc: "Front"
+ PMC_g4s_name_desc: "G4S is a London-based multi-national private security company from the merger of Securicor and Group 4 Falck. The company provides a number of services such as security personnel, response units, secure prisoner transportation and more. It has become one of the world's foremost private security companies by both revenue and employment in Europe and Africa." # ITT
+ PMC_asgard_name_desc: "Asgard is a German private military company founded in 2007. They are a private military company specializing in combat, training and more."
+ PMC_sinai_name_desc: "The Union of the Tribes of Sinai is a paramilitary force in the Northern Sinai province of Egypt which has fought side by side with the Egyptian Security Forces in the region. The force is primarily composed of people hailing from the local Bedouin Tribes. The force has become an effective force against insurgents and fighting bilaterally alongside coordinated professional military forces."
+ PMC_gard_name_desc: "Gardservis, founded in 2020, is a Belarusian-based security organization endorsed by the Belarusian government to hold and train special security forces from other nations, mainly African and South American nations. It is often compared to Russian-based private military company Wagner Group and is similarly in structure and purpose."
+ PMC_patriot_name_desc: "Patriot is the Russian private military company that was created in late 2018 as a more elite version of the Wagner Group. They focus more on personal protection and hire more exclusively from experienced soldiers with combat experience."
+ PMC_dewe_name_desc: "Dewe Security Services formed in 2011 by former military and police officers had first worked during the 2008 Beijing Olympics. They are often involved with training a variety of civilian poilce forces and part of the Chinese Belt & Road initiative to provide security to Chinese investments in Africa, Asia and the Middle East."
+ PMC_over_name_desc: "China Overseas Group Security is a state-sponsored Chinese security firm intended to work closely with overseas nations to ensure protection for Chinese and host country's interests. They provide a variety of services such as training, protection, and security for the nations who pay for their services."
+ PMC_front_name_desc: "Front (or Frontier Services Group) is a Chinese state-owned private security organization headquartered in Hong Kong Africa-focused security, aviation, and logistics company founded by the former Blackwater CEO Erik Prince. The company focuses primarily on logistical projects for shipping routes, security without the use of arms, and anti-terrorist security training. Furthermore, the company also specializes in high-risk evacuations from conflict zones."
  PMC_redut_name_desc: "Redut was formed in 2008 by a merger of various Russian Military veterans and units of the Ministry of Defense who had obtained combat experience in various peacekeeping and military missions."
- PMC_gazprom_name_desc: "Gazprom"
- PMC_iron_name_desc: "Iron Navy"
- PMC_sheriff_name_desc: "Sheriff"
- PMC_lukoil_name_desc: "Lukoil"
- PMC_rosneft_name_desc: "Rosneft"
- PMC_sberbank_name_desc: "Sberbank"
- PMC_vtb_name_desc: "VTB"
+ PMC_gazprom_name_desc: "In the wake of the dissolved Wagner PMC, Gazprom formed their own private security organization allowing them to secure their facilities. Gazprom is also most notably contracted by the Russian Ministry of Defense to protect oil & gas interests."
+ PMC_iron_name_desc: "Iron Navy is an Estonian-based private military company that provides a variety of protection services and yacht security services."
+ PMC_sheriff_name_desc: "Sheriff is the second-largest company in Transnistria and encompasses all profitable private businesses. They have a hand in petrol stations, supermarkets, TV channels, dealerships, hotels, and more. The security organization was formed as another method of income for the corporate giant. The company provides security services to the various holdings and has offered their services internationally."
+ PMC_lukoil_name_desc: "Lukoil formed its PMC focusing on combat and security details and intelligence gathering. The PMC sponsored by Lukoil is thought to be connected to former KGB agents."
+ PMC_rosneft_name_desc: "Rosneft another oil giant in Russia focused primarily on forming another military company with a focus on security forces."
+ PMC_sberbank_name_desc: "Sberbank is a state-owned Russian bank that formed a military company at the behest of the Russian government focusing mainly on combat and security forces."
+ PMC_vtb_name_desc: "VTB is a state-owned Russian bank that formed a military company under the name Convoy with the help of Arkady Rotenberg. Similar to other Russian private military companies the company focuses on military and security services aimed at providing combat and security forces."
  name_of_corp_desc_tt: "§Y[name_of_corp_desc]§!"
- light_inf_loc: "Light Infantry"
- mot_inf_loc: "Motorized Infantry"
- mech_inf_loc: "Mechanized Infantry"
- hvy_mech_inf_loc: "Heavy Mechanized Infantry"
- spc_inf_loc: "Specialized Infantry"
- tank_loc: "Tank Unit"
- spec_op_loc: "Special Operations Infantry"
- remove_light_inf_button_text: "Remove Light Infantry"
- remove_mot_inf_button_text: "Remove Mot. Infantry"
- remove_mech_inf_button_text: "Remove Mech. Infantry"
- remove_heavy_mech_inf_button_text: "Remove Heavy Mech. Infantry"
- remove_special_infantry_text: "Remove Special Infantry"
- remove_tank_unit_text: "Remove Tank Unit"
- remove_sf_inf_button_text: "Remove SOF Infantry"
- switch_recog_button_text: "Switch Recognition"
- pressure_countries_recog_button_text: "Pressure Countries"
- grant_recog_button_text: "Grant Recognition"
- rescind_recog_button_text: "Rescind Recognition"
 
  # Counter Terror Operations
  IS_counter_terror_threat_text: "Terror Threat"
