Fixed a spamming error log w/ the has_idea for the EU

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -52,6 +52,7 @@ v1.10.2
   - Fixed French CNES popularity public support
   - Fixed Kosovo focus making you get negative euroscepticism
   - Fixed the Keystone Pipeline instantly finishing
+  - Fixed a spamming error regarding the has_idea and has_country_flag EU_candidate
 
  Content:
   - New building "Commercialized Agriculture District"
