--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,6 +19,8 @@ v1.10.2
   - Reduced base yearly population growth from 0.01 to 0.008 to accommodate for the migration system
   - Reduced the Welfare law monthly population and spread it more evenly among the laws
   - Reduced the Foreign Influence Modifier to America
+  - Removed the requirement of needing to have Corruption Level of 7 or lower to do deradicalization campaigns
+  - Removed the Internal Security requirement to conducting Police Raids on Terrorists
 
  Bugfix:
   - Fixed an issue where the Base Fuel Gain of a nation wasn't quite accurate
@@ -57,7 +59,7 @@ v1.10.2
  Content:
   - New building "Commercialized Agriculture District"
   - New Internal Factions events and decisions
-  - Decoupled the Corruption Events from their old pulse and mixed them with the other corruption events
+  - Decoupled the Corruption Events from their old pulse and mixed them with the other random events. It should make it a bit less spammy
   - Added "The Eurozone Debt Crisis" event chain spurred from the USA Global Financial Crisis
   - Added "Migration Rate" mechanic to the game
   - Added a new law "Migration Law"
