--- a/localisation/russian/equipment_l_russian.yml
+++ b/localisation/russian/equipment_l_russian.yml
@@ -1897,7 +1897,21 @@
 
  FSA_artillery_0: "Hell Cannon"
  FSA_artillery_0_short: "Hell Cannon"
-
+ #DENMARK
+ DEN_infantry_weapons1: "Heckler & Koch M/66"
+ DEN_infantry_weapons1_short: "M/66"
+ DEN_infantry_weapons2: "Heckler & Koch M/75"
+ DEN_infantry_weapons2_short: "M/75"
+ DEN_infantry_weapons3: "Diemaco M/95"
+ DEN_infantry_weapons3_short: "M/95"
+ DEN_infantry_weapons4: "Diemaco M/10"
+ DEN_infantry_weapons4_short: "M/10"
+ DEN_infantry_weapons5: "HK416"
+ DEN_infantry_weapons5_short: "HK416"
+ DEN_infantry_weapons6: "HK416M 6.8"
+ DEN_infantry_weapons6_short: "HK416M 6.8"
+ DEN_infantry_weapons7: "AIF 40" #Project Name
+ DEN_infantry_weapons7_desc: ""
  ### Georgia ###
  GEO_infantry_weapons: "AK-47"
  GEO_infantry_weapons1: "PM MD63"
