--- a/localisation/simp_chinese/equipment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/equipment_l_simp_chinese.yml
@@ -1622,6 +1622,20 @@
  FSA_util_vehicle_1: "丰田海拉克斯"
  FSA_artillery_0: "地狱炮"
  FSA_artillery_0_short: "地狱炮"
+ DEN_infantry_weapons1: "Heckler & Koch M/66"
+ DEN_infantry_weapons1_short: "M/66"
+ DEN_infantry_weapons2: "Heckler & Koch M/75"
+ DEN_infantry_weapons2_short: "M/75"
+ DEN_infantry_weapons3: "Diemaco M/95"
+ DEN_infantry_weapons3_short: "M/95"
+ DEN_infantry_weapons4: "Diemaco M/10"
+ DEN_infantry_weapons4_short: "M/10"
+ DEN_infantry_weapons5: "HK416"
+ DEN_infantry_weapons5_short: "HK416"
+ DEN_infantry_weapons6: "HK416M 6.8"
+ DEN_infantry_weapons6_short: "HK416M 6.8"
+ DEN_infantry_weapons7: "AIF 40"
+ DEN_infantry_weapons7_desc: ""
  GEO_infantry_weapons: "AK-47"
  GEO_infantry_weapons1: "PM MD63"
  GEO_infantry_weapons2: "AK-74M"
