--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -747,6 +747,8 @@
  CUB_cubafuture_desc: "After many years, the Cuban people must decide where to go. Stay in communism, embark on the path of democracy, or try to gain dominance in the Caribbean?"
  CUB_join_csto: "Join CSTO"
  CUB_join_csto_desc: "Some Russian sources have begun to spread information about our joining the CSTO. Well, once they have started to speculate about it, there is no point in keeping it secret. Cuba is part of the CSTO."
+ CUB_israel: "Disapproval of Israeli Aggression"
+ CUB_israel_desc: "Israel has been too aggressive in its policies towards Arab countries and the people of Palestine. We condemn such actions by their leadership and demand a change in the course of their foreign policy."
  #TESAK BRANCH
  CUB_tesak_in_power: "Buenos Dias Extremistas"
  CUB_tesak_in_power_desc: "It's about time, start cleaning up and eradicating all the corruption in the world."
