--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -314,7 +314,7 @@
  CUB_revived_cuban_fleet: "Revived Cuban Fleet"
  CUB_our_projects_idea: "Our Projects"
  CUB_disorg_in_army_idea_1:  "Obsolete Military Force"
- CUB_disorg_in_army_idea_1_desc: "The once powerful Cuban Army, now a sad reflection of itself. Things need to change. You can take that national spirit out of the military reform thread."
+ CUB_disorg_in_army_idea_1_desc: "The once powerful Cuban Army, now a sad reflection of itself. Things need to change. You can remove this national spirit in the military reform branch."
  CUB_general_field_idea: "Mass Field Exercises"
  CUB_long_training_idea: "Extensive Military Drills"
  CUB_modern_army_idea: "Modern Cuban Army"
