--- a/localisation/english/MD_focus_CMW_l_english.yml
+++ b/localisation/english/MD_focus_CMW_l_english.yml
@@ -69,6 +69,8 @@
  CMW_renewable_energy_gain_multiplier_tt: "§YRenewable Power Generation Factor§!: [?CMW_renewable_energy_gain_multiplier_change|%+] \n"
  CMW_production_speed_synthetic_refinery_factor: "£construction_speed_texticon §Y$synthetic_refinery$§! construction speed"
  CMW_production_speed_synthetic_refinery_factor_tt: "£construction_speed_texticon §Y$synthetic_refinery$§! construction speed: [?CMW_production_speed_synthetic_refinery_factor_change|%+] \n"
+ CMW_agriculture_workers_modifier: "Workers Needed in §YSubsistence Agriculture§!"
+ CMW_agriculture_workers_modifier_tt: "Workers Needed in §YSubsistence Agriculture§!: [?CMW_agriculture_workers_modifier_change|%+] \n"
 
 
  ##### Focus Tree #####
@@ -151,7 +153,15 @@
  CMW_Blue_Charter: "Commonwealth Blue Charter"
  CMW_Blue_Charter_desc: "The Commonwealth Blue Charter is a commitment by Commonwealth member countries to collaborate in addressing and protecting the health and sustainability of the world's oceans and marine environments."
  CMW_Living_Lands: "Living Lands Charter"
- CMW_Living_Lands_desc: ""
+ CMW_Living_Lands_desc: "The Living Lands Charter is a groundbreaking environmental initiative adopted by the Commonwealth of Nations. This charter commits member states to sustainable land management practices, conservation of biodiversity, and combating climate change. By promoting reforestation, soil restoration, and the protection of natural habitats, the Commonwealth aims to ensure that future generations inherit a healthy and resilient environment."
+ CMW_Health_Section: "Secretariat’s Health Section"
+ CMW_Health_Section_desc: "The Commonwealth Secretariat's Health Section is a division within the Commonwealth Secretariat, which is responsible for providing support and guidance to Commonwealth member countries in matters related to healthcare, public health, and the development of health policies and programs within the Commonwealth. It plays a role in facilitating cooperation and sharing of best practices in the field of health among member states."
+ CMW_Body_And_Sports: "The Commonwealth Advisory Body on Sport"
+ CMW_Body_And_Sports_desc: "The Commonwealth Advisory Body on Sport is a committee that advises and guides Commonwealth member countries on sports-related policies and programs, with a focus on promoting social development, health, and well-being through sports."
+ CMW_Youth_Networks: "Commonwealth Youth Networks"
+ CMW_Youth_Networks_desc: "Commonwealth Youth Networks are specific youth-focused groups or organizations within the Commonwealth that facilitate collaboration, information sharing, and collective action among young people across Commonwealth member countries. These networks often address issues relevant to youth, such as education, employment, and social development."
+ CMW_Defense_Association: "Commonwealth Defensive Association"
+ CMW_Defense_Association_desc: "The Commonwealth Defensive Association is a collaborative consortium of Commonwealth member countries focused on bolstering their collective defense capabilities and security. This alliance serves as a platform for mutual support, strategic coordination, and the shared pursuit of peace and stability within the Commonwealth community."
 
  ##### Events #####
  # Leaving CMW
