--- a/localisation/english/MD_focus_CMW_l_english.yml
+++ b/localisation/english/MD_focus_CMW_l_english.yml
@@ -71,6 +71,8 @@
  CMW_production_speed_synthetic_refinery_factor_tt: "£construction_speed_texticon §Y$synthetic_refinery$§! construction speed: [?CMW_production_speed_synthetic_refinery_factor_change|%+] \n"
  CMW_agriculture_workers_modifier: "Workers Needed in §YSubsistence Agriculture§!"
  CMW_agriculture_workers_modifier_tt: "Workers Needed in §YSubsistence Agriculture§!: [?CMW_agriculture_workers_modifier_change|%+] \n"
+ CMW_expected_police_modifier: "§YExpected Police Spending§!"
+ CMW_expected_police_modifier_tt: "§YExpected Police Spending§!: [?CMW_expected_police_modifier_change|%+] \n"
 
 
  ##### Focus Tree #####
@@ -169,6 +171,10 @@
  CMW_Leaving.1.d: "[THIS.GetName] has officially announced its departure from the Commonwealth of Nations. This decision marks a significant shift in its foreign policy, reflecting a desire for greater autonomy and new international alliances. The departure may impact diplomatic relations and economic ties within the Commonwealth, presenting new challenges and opportunities for both the departing nation and remaining member states."
  CMW_Leaving.1.a: "Good Luck"
 
-##### Misc #####
+ ##### Misc #####
  Commonwealth_allies_tech_share_name: "Commonwealth Education Framework"
  Commonwealth_allies_tech_share_desc: "The Commonwealth Education Framework establishes a unified approach to educational standards and practices across member states"
+
+ ##### Ideas #####
+ CMW_Patrol_Boat_Program_Member: "Commonwealth Patrol Boat Program"
+ CMW_Patrol_Boat_Program_Leader: "Commonwealth Patrol Boat Program Initiator"
