--- a/localisation/english/attack_helicopter_modules_l_english.yml
+++ b/localisation/english/attack_helicopter_modules_l_english.yml
@@ -216,4 +216,4 @@ em_lock_detection_system_gen3_desc: ""
 transport_helo_engine_upgrade: "Engine"
 transport_helo_gun_upgrade: "Door Guns"
 transport_helo_countermeasure_upgrade: "Countermeasures"
-transport_helo_reliablity_upgrade: "Reliablity"
+transport_helo_reliability_upgrade: "Reliability"
