--- a/localisation/english/MD_focus_USA_l_english.yml
+++ b/localisation/english/MD_focus_USA_l_english.yml
@@ -2892,7 +2892,7 @@
  donald_trump.10.o1: "Mining shall begin"
 
  donald_trump.11.t: "Profits from Mining Start Pouring in"
- donald_trump.11.d: "After establishing mining operations, SpaceX and NASA have both sent back their first shipments of space-material to labs and markets around the globe. The world has jelously looked on us, and there have been open talks in their respective chambers of legislation about opening their own asteroid mining operations. While we soon may get competition, we can enjoy the monopoly for now."
+ donald_trump.11.d: "After establishing mining operations, SpaceX and NASA have both sent back their first shipments of space-material to labs and markets around the globe. The world has jealousy looked on us, and there have been open talks in their respective chambers of legislation about opening their own asteroid mining operations. While we soon may get competition, we can enjoy the monopoly for now."
  donald_trump.11.o1: "Huzzah!"
 
  donald_trump.12.t: "Profits from Asteroid Mining"
