--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1675,7 +1675,7 @@
  DJI_communism_DEF: "Djibouti"
  DJI_fascism_ADJ: "Djiboutian"
  DJI_democratic_ADJ: "Djiboutian"
- DJI_neutrality_ADJ: "Djibuotian"
+ DJI_neutrality_ADJ: "Djiboutian"
  DJI_communism_ADJ: "Djiboutian"
  DJI_nationalist: "Djibouti"
  DJI_nationalist_DEF: "Djibouti"
