--- a/Changelog.txt
+++ b/Changelog.txt
@@ -21,6 +21,7 @@ v1.10.2
   - Reduced the Foreign Influence Modifier to America
   - Removed the requirement of needing to have Corruption Level of 7 or lower to do deradicalization campaigns
   - Removed the Internal Security requirement to conducting Police Raids on Terrorists
+  - Reduced and increased some POL national spirit modifiers and changed some of them to permament spirits.
 
  Bugfix:
   - Fixed an issue where the Base Fuel Gain of a nation wasn't quite accurate
@@ -51,6 +52,7 @@ v1.10.2
   - Fixed a localization error where the Hezbollah Border War with Israel would give you Shia related descriptions despite being Israel
   - Fixed bug that Chinese didn't have SPAA in 2000s
   - Fixed Polish military tech boosts not working with NSB and BBA dlcs
+  - Fixed Polish focuses that add buildings to bypass when building cannot be added
   - Fixed French CNES popularity public support
   - Fixed Kosovo focus making you get negative euroscepticism
   - Fixed the Keystone Pipeline instantly finishing
