--- a/Changelog.txt
+++ b/Changelog.txt
@@ -21,7 +21,8 @@ v1.10.2
   - Reduced the Foreign Influence Modifier to America
   - Removed the requirement of needing to have Corruption Level of 7 or lower to do deradicalization campaigns
   - Removed the Internal Security requirement to conducting Police Raids on Terrorists
-  - Reduced and increased some POL national spirit modifiers and changed some of them to permament spirits.
+  - Reduced and increased some POL national spirit modifiers and changed some of them to permament spirits
+  - Country of Peace national spirit in POL can be reduced now in every political branch
 
  Bugfix:
   - Fixed an issue where the Base Fuel Gain of a nation wasn't quite accurate
