--- a/localisation/russian/equipment_l_russian.yml
+++ b/localisation/russian/equipment_l_russian.yml
@@ -1912,6 +1912,7 @@
  DEN_infantry_weapons6_short: "HK416M 6.8"
  DEN_infantry_weapons7: "AIF 40" #Project Name
  DEN_infantry_weapons7_desc: ""
+
  ### Georgia ###
  GEO_infantry_weapons: "AK-47"
  GEO_infantry_weapons1: "PM MD63"
@@ -3289,8 +3290,19 @@
  NKO_util_vehicle_8: "ZFB-35"
 
  ### Norway ###
- NOR_infantry_weapons: "AG-3"
- NOR_infantry_weapons2: "AG-3F2"
+ NOR_infantry_weapons1: "AG3"
+ NOR_infantry_weapons1_short: "AG3"
+ NOR_infantry_weapons2: "AG3F1"
+ NOR_infantry_weapons2_short: "AG3F1"
+ NOR_infantry_weapons3: "AG3F2"
+ NOR_infantry_weapons3_short: "AG3F2"
+ NOR_infantry_weapons4: "HK416N"
+ NOR_infantry_weapons4_short: "HK416N"
+ NOR_infantry_weapons5: "HK416A5N"
+ NOR_infantry_weapons5_short: "HK416A5N"
+ NOR_infantry_weapons6: "HK416NM 6.8"
+ NOR_infantry_weapons6_short: "HK416NM 6.8"
+ NOR_infantry_weapons7: "AIF 40"
 
  NOR_command_control_equipment: "Kongsberg Tactical Communication System"
  NOR_command_control_equipment_short: "K-TaCS"
@@ -4582,7 +4594,7 @@
  SWE_IFV_8: "Combat Vehicle 100"
  SWE_IFV_8_short: "CV-110"
 
- SWE_Anti_tank_0: "Carl Gustaf"
+ SWE_Anti_tank_0: "Carl Gustaf/M136"
  SWE_Anti_tank_1: "RBS 56 BILL"
  SWE_Anti_tank_2: "MBT LAW"
 
@@ -5019,8 +5031,8 @@
  USA_IFV_8: "FFV-2" #Fictional
  USA_IFV_8_short: "FFV-2" #Fictional
 
- USA_Anti_tank_0: "M-72 LAW"
- USA_Anti_tank_1: "M-47 Super-Dragon"
+ USA_Anti_tank_0: "M72 LAW"
+ USA_Anti_tank_1: "TOW"
  USA_Anti_tank_2: "FGM-148 Javelin"
  USA_Anti_tank_3: "FGM-246 Firespear" #Fictional
  USA_Anti_tank_4: "HEL-414" #Fictional
