--- a/localisation/simp_chinese/equipment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/equipment_l_simp_chinese.yml
@@ -1636,6 +1636,7 @@
  DEN_infantry_weapons6_short: "HK416M 6.8"
  DEN_infantry_weapons7: "AIF 40"
  DEN_infantry_weapons7_desc: ""
+
  GEO_infantry_weapons: "AK-47"
  GEO_infantry_weapons1: "PM MD63"
  GEO_infantry_weapons2: "AK-74M"
@@ -2806,8 +2807,19 @@
  NKO_util_vehicle_6: "ZFB-21"
  NKO_util_vehicle_7: "ZFB-27"
  NKO_util_vehicle_8: "ZFB-35"
- NOR_infantry_weapons: "AG-3"
- NOR_infantry_weapons2: "AG-3F2"
+ NOR_infantry_weapons1: "AG3"
+ NOR_infantry_weapons1_short: "AG3"
+ NOR_infantry_weapons2: "AG3F1"
+ NOR_infantry_weapons2_short: "AG3F1"
+ NOR_infantry_weapons3: "AG3F2"
+ NOR_infantry_weapons3_short: "AG3F2"
+ NOR_infantry_weapons4: "HK416N"
+ NOR_infantry_weapons4_short: "HK416N"
+ NOR_infantry_weapons5: "HK416A5N"
+ NOR_infantry_weapons5_short: "HK416A5N"
+ NOR_infantry_weapons6: "HK416NM 6.8"
+ NOR_infantry_weapons6_short: "HK416NM 6.8"
+ NOR_infantry_weapons7: "AIF 40"
  NOR_command_control_equipment: "康斯伯格战术通信系统"
  NOR_command_control_equipment_short: "K-TaCS"
  NOR_command_control_equipment1: "康斯伯格战术通信系统 C3"
@@ -3848,7 +3860,7 @@
  SWE_IFV_7_short: "CV 100"
  SWE_IFV_8: "CV 110"
  SWE_IFV_8_short: "CV 110"
- SWE_Anti_tank_0: "卡尔 古斯塔夫"
+ SWE_Anti_tank_0: "卡尔 古斯塔夫/M136"
  SWE_Anti_tank_1: "RBS 56 比尔"
  SWE_Anti_tank_2: "MBT LAW"
  SWE_MBT_1: "Strv 81"
@@ -4212,8 +4224,8 @@
  USA_IFV_7_short: "FFV-1"
  USA_IFV_8: "FFV-2"
  USA_IFV_8_short: "FFV-2"
- USA_Anti_tank_0: "M-72 LAW"
- USA_Anti_tank_1: "M47 超级龙"
+ USA_Anti_tank_0: "M72 LAW"
+ USA_Anti_tank_1: "TOW"
  USA_Anti_tank_2: "FGM-148 标枪"
  USA_Anti_tank_3: "FGM-246 火矛"
  USA_Anti_tank_4: "HEL-414"
