--- a/localisation/english/attack_helicopter_modules_l_english.yml
+++ b/localisation/english/attack_helicopter_modules_l_english.yml
@@ -45,6 +45,7 @@ EQ_MOD_CAT_helicopter_light_nose_gun_TITLE: "Light Nose Guns"
 EQ_MOD_CAT_helicopter_medium_nose_gun_TITLE: "Medium Nose Guns"
 EQ_MOD_CAT_helicopter_heavy_nose_gun_TITLE: "Heavy Nose Guns"
 EQ_MOD_CAT_helicopter_wing_armament_TITLE: "Helicopter Wing Armaments"
+EQ_MOD_CAT_helicopter_sensor_and_avionics_type_TITLE: "Sensors and Avionics"
 
 #### Turbine Engines ####
 helicopter_turbine_engine_gen1: "1st Generation Turbine Engines"
