--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -344,7 +344,7 @@
  UKR_idea_trained_expanded_general_staff: "Reformed General Staff"
  UKR_idea_trained_expanded_general_staff_desc: "Our general staff has now been reformed. Every person who gained their position has been subject to proper military education or cut from the general staff. We will make an arm out of them yet.\n"
  UKR_idea_expanding_military_research: "Expanding Militray Research"
- UKR_idea_foreign_assistance: "Fireign Assistance"
+ UKR_idea_foreign_assistance: "Foreign Assistance"
  UKR_every_man_ataman: "Every man - ataman"
  UKR_russian_dependent_military: "Russian dependent military"
  UKR_military_state_6: "Military sector in ruins"
