--- a/localisation/english/MD_international_l_english.yml
+++ b/localisation/english/MD_international_l_english.yml
@@ -34,7 +34,7 @@
 
  # Private Military Companies Section
  PMC_company_button_tt: "[name_of_corp_desc]\n-----------\n§YPrerequisites:§!\n[!name_of_pmc_companies_button_click_enabled]\n§YEffects:§!\n[!name_of_pmc_companies_button_click]"
- pmc_unit_button_tt: "§YPrerequisites:§![!name_of_pmc_units_button_click_enabled]\n\n§YEffects:§!\n[!name_of_pmc_units_button_click]"
+ pmc_unit_button_tt: "§YPrerequisites:§!\n[!name_of_pmc_units_button_click_enabled]\n\n§YEffects:§!\n[!name_of_pmc_units_button_click]"
  light_inf_tt: "§YPrerequisites:§!\n[!remove_light_inf_button_click_enabled]"
  mot_inf_tt: "§YPrerequisites:§!\n[!remove_mot_inf_button_click_enabled]"
  mech_inf_tt: "§YPrerequisites:§!\n[!remove_mech_inf_button_click_enabled]"
