--- a/localisation/english/MD_tooltips_l_english.yml
+++ b/localisation/english/MD_tooltips_l_english.yml
@@ -560,7 +560,7 @@
  unasur_must_control_tt: "Every country in Unasur must:\n - Have compatible Outlooks §YOR§! \n - Be in the same alliance §YOR§! \n - Be puppets of Brazil. \n"
  mercosur_must_control_tt: "Every country in Mercosur must:\n - Have compatible Outlooks §YOR§! \n - Be in the same alliance §YOR§! \n - Be puppets of Brazil. \n"
  form_unasur_tt: "§YForm the Unasur Federation!§!\n"
- form_mercosur_tt: "§YForm the Mercosur Federation!§! n"
+ form_mercosur_tt: "§YForm the Mercosur Federation!§!\n"
  common_market: "Common Market"
  consumption_economy_TT: "Resources to Market: §Y0%§!\n"
  reset_internal_faction_opinion: "Will reset all internal faction opinions.\n"
