--- a/localisation/english/MD_international_l_english.yml
+++ b/localisation/english/MD_international_l_english.yml
@@ -76,7 +76,7 @@
  PMC_sandline_loc: "£sandline_button"
  PMC_kbr_loc: "£kbr_button"
  PMC_nirtal_loc: "£nirtal_button"
- PMC_halo_loc: "£hamo_button"
+ PMC_halo_loc: "£halo_button"
  PMC_defense_loc: "£dci_button"
  PMC_gardaworld_loc: "£garda_button"
  PMC_esa_loc: "£eu_button"
