--- a/localisation/english/MD_focus_DEN_l_english.yml
+++ b/localisation/english/MD_focus_DEN_l_english.yml
@@ -502,7 +502,7 @@
  DEN_broken_system: "A Broken System"
  DEN_broken_system_desc: "The greatest challenge facing us today is ourselves. The power holders proved long ago that they do not care about anything but their own interests. If we are to create a better Denmark, we must be prepared to tear down the husk of a country that currently bears its name."
  DEN_declare_martial_law: "End the Protests"
- DEN_declare_martial_law_desc: "It is time we delcare martial law on the country. The system is broken and we must make a change to better our future."
+ DEN_declare_martial_law_desc: "It is time we declare martial law on the country. The system is broken and we must make a change to better our future."
  DEN_rally_to_dannebrog: "Rally to Dannebrog!"
  DEN_rally_to_dannebrog_desc: "The system has failed! It is time we fight for all we have dear - like our ancestors of old, we must rally to our old Dannebrog and push out the internationalist revolutionaries!"
  DEN_fight_nationalists: "Fight the Nationalists!"
