--- a/localisation/english/MD_focus_DEN_l_english.yml
+++ b/localisation/english/MD_focus_DEN_l_english.yml
@@ -709,7 +709,7 @@
  DEN_befriend_germany: "Befriend Germany"
  DEN_befriend_germany_desc: "Our south neighbour, Germany, usually thinks we don't matter, lets show them we do."
  DEN_reaffirm_nato: "Reaffirm NATO"
- DEN_reaffirm_nato_desc: "Without the protection of the NATO, we would propably be already dissapeared from the globe by the Soviets."
+ DEN_reaffirm_nato_desc: "Without the protection of the NATO, we would probably be already disappeared from the globe by the Soviets."
  DEN_leave_nato: "Leave NATO"
  DEN_leave_nato_desc: "We muust leave NATO to secure danish position in world politics."
  DEN_western_values: "Spreading Democracy"
@@ -898,7 +898,7 @@
  DEN_small_arms_desc: "To ensure that Danish infantry soldiers are equipped with the most reliable and effective firearms available, the Danish Government invests in the procurement of state-of-the-art small arms. Contracts are secured for the acquisition of modern assault rifles, carbines, and pistols, providing Danish soldiers with superior firepower and accuracy on the battlefield."
  DEN_G36: "G36"
  DEN_G36_desc: "In line with NATO standards and interoperability requirements, the Danish Government selects the Heckler & Koch G36 rifle as the standard issue weapon for Danish infantry units. Contracts are negotiated with Heckler & Koch for the production and delivery of G36 rifles, enabling Danish soldiers to operate with confidence and precision in diverse operational environments."
- DEN_streamline_infantry_production: "Streamline Infantry Production"
+ DEN_streamline_infantry_production: "Streamline the Infantry Equipment Production"
  DEN_streamline_infantry_production_desc: "To expedite the procurement process and reduce logistical burdens, the Danish Government streamlines infantry equipment production by centralizing manufacturing facilities and optimizing supply chain management. By consolidating production lines and implementing lean manufacturing principles, the government aims to improve efficiency and cost-effectiveness in equipping Danish infantry units."
  DEN_C7: "C7"
  DEN_C7_desc: "Building on the success of its longstanding partnership with Canada, the Danish Government continues to procure Colt Canada C7 rifles for its infantry forces. Contracts are renewed for the production and delivery of C7 rifles, ensuring interoperability with Canadian and other allied forces while maintaining the high standards of reliability and performance."
