Fixed Appeal to Nationalists decision providing democratic support

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -61,6 +61,7 @@ v1.10.2
   - Fixed Kosovo focus making you get negative euroscepticism
   - Fixed the Keystone Pipeline instantly finishing
   - Fixed a spamming error regarding the has_idea and has_country_flag EU_candidate
+  - Fixed the Serbian decision "Appeal to Nationalist" providing democratic support instead of nationalist
 
  Content:
   - New building "Commercialized Agriculture District"
