--- a/Changelog.txt
+++ b/Changelog.txt
@@ -62,6 +62,7 @@ v1.10.2
   - Fixed the Keystone Pipeline instantly finishing
   - Fixed a spamming error regarding the has_idea and has_country_flag EU_candidate
   - Fixed the Serbian decision "Appeal to Nationalist" providing democratic support instead of nationalist
+  - Fixed Iraq's focus effect "Outlaw Opposition" which would ban Ba'ath Party
 
  Content:
   - New building "Commercialized Agriculture District"
