--- a/localisation/english/MD_focus_BOS_l_english.yml
+++ b/localisation/english/MD_focus_BOS_l_english.yml
@@ -2,7 +2,7 @@
  Bosnia_focus: "Bosnian Focus Tree"
  BOS_yugo_nost_completed: "Has completed Yugonostalgia"
  BOS_Anti_goverment_demonstrations: "Anti Government Demonstrations"
- BOS_Anti_goverment_demonstrations_info: "Many have taken to the streets over are actions."
+ BOS_Anti_goverment_demonstrations_info: "Many have taken to the streets over our actions."
  #focuses titles
  bos_switches_leader: "Changes Leaders"
  BOS_army_of_the_federation_Bosnia_Herzegovina: "Army of the Federation of Bosnia & Herzegovina"
@@ -685,7 +685,7 @@
  Bosnia.12.a: "A shift in Gorverment is need"
  Bosnia.12.b: "Reach a deal"
 
- Bosnia.13.t: "Reach a agreement "
+ Bosnia.13.t: "Reach an agreement "
  Bosnia.13.d: "Many have called for peace and a stop to the protests . Today the government has signed off a deal that will support the works. Now and into the future.  "
  Bosnia.13.a: "A deal that we had to take"
 
