--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -3032,7 +3032,7 @@
  very_large_gun_tech_3: "Advanced Super Heavy Tank Gun"
  very_large_gun_tech_3_desc: "With the additional electromagnetic acceleration of the shell, a super heavy tank gun will be able to pierce armour, buildings and even bunkers with its rounds."
  small_autocannon_tech: "Early Cold War Autocannon"
- small_autocannon_tech_desc: "With a caliber of 20-30mm, usually just straight a up WW2 AA gun with a few modifications. Does its job well, though."
+ small_autocannon_tech_desc: "With a caliber of 20-30mm, usually just straight up WW2 AA gun with a few modifications. Does its job well, though."
  small_autocannon_tech_2: "Late Cold War Autocannon"
  small_autocannon_tech_2_desc: "Dedicated autocannon aimed to defeat infantry and metal alike."
  small_autocannon_tech_3: " Modern Autocannon"
