--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -2467,6 +2467,7 @@
  BLR_B200_Polonez: "B200 Polonez"
  asseco_research: "Asseco Research."
  BLR_oil_sov: "Energy Contract With Belarus"
+ BLR_new_railways: "New Railways"
 
  belarus_another.6.t: "The Cult of Lukashenko."
  belarus_another.6.d: "Alexander Lukashenko has been the permanent President of the Republic of Belarus for a very long time. During his reign, a whole cult of \"batka\" built up around him. This cult distinguishes him from other dictators of the CIS but also forces him to interact with his people in a special way. The support of the Batka is an indicator showing how great the support of Alexander Grigoryevich Lukashenko is in all segments of the population. Depending on various actions, this indicator will decrease or increase, giving various bonuses or debuffs."
