--- a/localisation/simp_chinese/MD_War_on_terror_content_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_War_on_terror_content_l_simp_chinese.yml
@@ -19,7 +19,7 @@
  war_on_terror_category: "持久自由军事行动和反恐战争"
  war_on_terror_category_desc: "持久自由行动（OEF）是美国政府在全球反恐战争中使用的正式名称。该策略针对外国的恐怖组织，并允许美国对逍遥法外的恐怖分子及其支持者实行打击。"
  KUR_war_on_terror_category: "伊拉克自由行动"
- KUR_war_on_terror_category_desc: "美国发起了“伊拉克自由行动”，即对伊拉克的入侵。这是我们打击萨达姆·侯赛因及进一步脱离伊拉克的桎梏的机会。"
+ KUR_war_on_terror_category_desc: "美国发起了“伊拉克自由行动”，即对伊拉克的入侵。这是我们打击[IRQ.GetLeader]并进一步摆脱伊拉克桎梏的机会。"
  usa_increase_intelligence_spending: "增加情报开支"
  usa_increase_intelligence_spending_desc: "我们手上的零散情报预示着一场严重的恐怖袭击。目前，我们没有能够妥善应对这种威胁的办法。我们需要增加情报开支，并扩大FBI和CIA的监视权。这些行为的政治成本高昂，但是我们国家的安全正暴露于危险之中。"
  usa_demand_extradition_of_bin_laden: "要求引渡本拉登"
@@ -33,7 +33,7 @@
  usa_create_guantanamo_bay: "设立关塔那摩湾拘留营"
  usa_create_guantanamo_bay_desc: "为了应对未来疑似或已证实的恐怖分子，美国政府和特勤局将会需要建立一座妥当且安全的监狱，以免在监狱起义或有人逃离监狱时使美国平民面临风险。理想情况下，这座监狱应该位于一座还怀有敌对态度的政府的岛上，并可以密切注视着我们领土的边界，值得庆幸的是，在古巴岛上恰好可以这么安排。自1903年以来，美国在关塔那摩湾海军基地地区拥有租借权（古巴政府不再认可），此租约于1934年无限期延长。\n\n而且，此位置的另一个好处是，关塔那摩湾既不是一个州，也不是美国领土，这意味着美国法律甚至美国宪法都不一定在那里适用。这将为中央情报局提供一些有趣的选择。"
  usa_petition_invasion_of_iraq: "请求联合国同意入侵伊拉克"
- usa_petition_invasion_of_iraq_desc: "我们获知萨达姆·侯赛因拥有大规模杀伤性武器，必须请求联合国允许我们除掉他。这是为了全世界和伊拉克人民的利益。"
+ usa_petition_invasion_of_iraq_desc: "我们获知[IRQ.GetLeader]拥有大规模杀伤性武器，必须请求联合国允许我们除掉他。这是为了全世界和伊拉克人民的利益。"
  usa_run_war_support_campaign_against_iraq: "开展战争支持运动以入侵伊拉克"
  usa_run_war_support_campaign_against_iraq_desc: "联合国不同意我们入侵伊拉克。在进行入侵之前，我们需要开展一场媒体运动，让美国人民站在我们这一边。"
  usa_operation_iraqi_freedom: "伊拉克自由行动"
@@ -96,7 +96,7 @@
  wot.13.c: "艾哈迈德·沙阿·马苏德"
  wot.13.d: "穆罕默德·查希尔·沙赫"
  wot.14.t: "美国请求批准入侵伊拉克"
- wot.14.d: "美国提出了为入侵伊拉克辩护的理由。美国声称萨达姆·侯赛因对伊拉克人民与该地区的和平构成了威胁，同时伊拉克也拥有大规模杀伤性武器。联合国检查人员都没有发现这些武器，但美国仍然坚持这些主张。"
+ wot.14.d: "美国提出了为入侵伊拉克辩护的理由。美国声称[IRQ.GetLeader]对伊拉克人民与该地区的和平构成了威胁，同时伊拉克也拥有大规模杀伤性武器。联合国检查人员都没有发现这些武器，但美国仍然坚持这些主张。"
  wot.14.a: "我们投赞成票"
  wot.14.b: "我们投反对票"
  wot.15.t: "申请被拒绝"
@@ -107,7 +107,7 @@
  wot.16.d: "联合国批准了我们进军伊拉克的申请。"
  wot.16.a: "名正言顺！"
  wot.17.t: "加入对伊拉克的入侵？"
- wot.17.d: "美国计划入侵伊拉克以推翻萨达姆·侯赛因的政府。美国要求我们加入他们的战争。"
+ wot.17.d: "美国计划入侵伊拉克以推翻[IRQ.GetLeader]的政府。美国要求我们加入他们的战争。"
  wot.17.a: "当然，我们会帮助我们的盟友！"
  wot.17.b: "这是一场非正义战争"
  wot.20.t: "奥萨马·本·拉登逃离抓捕"
@@ -164,16 +164,16 @@
  wotnews.9.d: "为了回应9月11日的恐怖袭击，美国政府一直在寻找一个可以安置被指控参与恐怖活动或积极计划这样做的高风险监狱囚犯的地方。\n\n现在一座拘留营已经在美国控制的古巴岛关塔那摩湾海军基地的古巴部分建立。古巴政府不承认美国正在继续租借关塔那摩湾，且已经对美国在该岛进一步发展的军事存在提出了抗议。"
  wotnews.9.a: "这肯定是完全合法且人道的。"
  wotnews.10.t: "联合国批准入侵伊拉克"
- wotnews.10.d: "联合国安理会批准了美国推翻伊拉克萨达姆·侯赛因政府的请求。这一前所未有的举动意味着美国可以在国际法范围内入侵伊拉克。"
+ wotnews.10.d: "联合国安理会批准了美国推翻伊拉克[IRQ.GetLeader]政府的请求。这一前所未有的举动意味着美国可以在国际法范围内入侵伊拉克。"
  wotnews.10.a: "有趣"
  wotnews.11.t: "伊拉克战争开始"
- wotnews.11.d: "伊拉克首都巴格达发生爆炸后不久，[USA.GetLeader]总统发表了直播讲话，标志着“伊拉克自由行动”的启动。这一以美国为首的行动旨在使伊拉克摆脱独裁者萨达姆·侯赛因，并摧毁其储存、开发和部署其储存的大规模杀伤性武器的能力。袭击发生在伊拉克总统萨达姆·侯赛因违反了在48小时之内离开伊拉克的最后通牒之后的几天。为了回应军事入侵，伊拉克共和国广播电台在巴格达称：“那些恶人是上帝、家园和人类的敌人，他们对我们的家园和人民进行了愚蠢的侵略。” 同时，美国军方消息来源称，伊拉克政权的五个主要成员，包括萨达姆·侯赛因，都是第一次袭击的目标。"
+ wotnews.11.d: "伊拉克首都巴格达发生爆炸后不久，[USA.GetLeader]总统发表了直播讲话，标志着“伊拉克自由行动”的启动。这一以美国为首的行动旨在使伊拉克摆脱独裁者[IRQ.GetLeader]，并摧毁其储存、开发和部署其储存的大规模杀伤性武器的能力。袭击发生在伊拉克总统[IRQ.GetLeader]违反了在48小时之内离开伊拉克的最后通牒之后的几天。为了回应军事入侵，伊拉克共和国广播电台在巴格达称：“那些恶人是上帝、家园和人类的敌人，他们对我们的家园和人民进行了愚蠢的侵略。” 同时，美国军方消息来源称，伊拉克政权的五个主要成员，包括[IRQ.GetLeader]，都是第一次袭击的目标。"
  wotnews.11.a: "反恐战争仍在继续。"
- wotnews.12.t: "萨达姆·侯赛因被抓获"
- wotnews.12.d: "今日，萨达姆·侯赛因于其家乡提克里特附近某农场的地下藏身处被美军抓获。被捕时其头发蓬乱，面容憔悴。在美军入侵伊拉克首都数月后，萨达姆的落网标志着历史上规模最大的一次搜捕行动告一段落。美国总统[USA.GetLeader]今天下午的电视讲话中称，萨达姆将面对“数百万遭其压迫人民的正义制裁”，而这一伊拉克前领导人的落网“标志着他，与所有以他名义暴虐人民者的末路”。总统也提醒称，这并不意味着伊拉克境内的暴力冲突也将结束。"
+ wotnews.12.t: "[IRQ.GetLeader]被抓获"
+ wotnews.12.d: "今日，[IRQ.GetLeader]于其家乡提克里特附近某农场的地下藏身处被美军抓获。被捕时其头发蓬乱，面容憔悴。在美军入侵伊拉克首都数月后，萨达姆的落网标志着历史上规模最大的一次搜捕行动告一段落。美国总统[USA.GetLeader]今天下午的电视讲话中称，萨达姆将面对“数百万遭其压迫人民的正义制裁”，而这一伊拉克前领导人的落网“标志着他，与所有以他名义暴虐人民者的末路”。总统也提醒称，这并不意味着伊拉克境内的暴力冲突也将结束。"
  wotnews.12.a: "女士们先生们，我们抓住他了！"
- wotnews.13.t: "萨达姆·侯赛因被判处死刑"
- wotnews.13.d: "在被伊拉克法庭判决反人类罪后，萨达姆·侯赛因于当地时间上午六时整（格林尼治标准时间凌晨三时整）于伊拉克首都巴格达什叶派地区某前军事情报总部被处决。[USA.GetLeader]在一份预先准备好的通稿中称，处决萨达姆并不会阻止伊拉克境内的暴力冲突，但表示“这是伊拉克成为可以存续，自治和自卫的民主国家与反恐战争盟友这一进程的重要里程碑”。伊拉克总理办公厅发表声明称，对于用残酷犯罪镇压人民的统治者来说，萨达姆被处决是一次“有力的教训”。"
+ wotnews.13.t: "[IRQ.GetLeader]被判处死刑"
+ wotnews.13.d: "在被伊拉克法庭判决反人类罪后，[IRQ.GetLeader]于当地时间上午六时整（格林尼治标准时间凌晨三时整）于伊拉克首都巴格达什叶派地区某前军事情报总部被处决。[USA.GetLeader]在一份预先准备好的通稿中称，处决萨达姆并不会阻止伊拉克境内的暴力冲突，但表示“这是伊拉克成为可以存续，自治和自卫的民主国家与反恐战争盟友这一进程的重要里程碑”。伊拉克总理办公厅发表声明称，对于用残酷犯罪镇压人民的统治者来说，萨达姆被处决是一次“有力的教训”。"
  wotnews.13.a: "好的。"
  wotnews.14.t: "美国从伊拉克撤军"
  wotnews.14.d: "随着美军的最后一支部队撤出伊拉克，持续了将近9年的战争结束了，战争双方均遭受了许多人员伤亡，这使一个国家陷入了政治充满不确定性的困境。最后一队载有500名美军的约100辆美国军用MRAP装甲车，从其最后一个基地出发，在黑夜穿越整个伊拉克南部沙漠，沿着空旷的公路通往科威特边界。对美国来说，撤军兑现了让军人们从冲突中回家的承诺，这场战争被广泛认为是自越南以来最不受欢迎的战争，也是动摇了美国在世界范围内地位的战争。不过，对于伊拉克人来说，美军的离开带来了一种主权意识，但担心自己的国家可能再次陷入宗派暴力的恐惧中和了这种喜悦，这种宗派暴力在2006-2007年的顶峰时期使数千人丧生。"
