--- a/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
@@ -2297,3 +2297,4 @@
  UKR_ukraine_ready_union_state: "§Y[?UKR.union_state|-0]§!"
  UKR_ukraine_readys_union_state: "§Y[UKR.GetNameWithFlag]§!准备融入§Y联盟国§!的§Y进度§!"
  UKR_ukraine_notreadys_union_state: "§R不可用§!"
+ BLR_new_railways: "新铁路"
