--- a/localisation/simp_chinese/MD_focus_BOS_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BOS_l_simp_chinese.yml
@@ -1,7 +1,7 @@
 ﻿l_simp_chinese:
  BOS_yugo_nost_completed: "已完成尤戈诺斯塔利亚"
  BOS_Anti_goverment_demonstrations: "反政府示威"
- BOS_Anti_goverment_demonstrations_info: "许多人走上街头开始抗议行动。"
+ BOS_Anti_goverment_demonstrations_info: "许多人因我们的行为而走上街头。"
  bos_switches_leader: "更换领导人"
  BOS_army_of_the_federation_Bosnia_Herzegovina: "波斯尼亚和黑塞哥维那联邦军队"
  BOS_army_of_republic_of_Srpska: "塞族共和国军队"
