--- a/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
@@ -286,7 +286,7 @@
  CUB_revived_cuban_fleet: "复兴古巴舰队"
  CUB_our_projects_idea: "我们的工程"
  CUB_disorg_in_army_idea_1: "过时的军事力量"
- CUB_disorg_in_army_idea_1_desc: "曾经强大的古巴军队，现在却成了一个悲伤的倒影。事情需要改变。你可以通过军事改革来消除这个国家精神。"
+ CUB_disorg_in_army_idea_1_desc: "曾经强大的古巴军队如今却黯然失色。情况需要改变。你可以在军事改革分支中消除此国家精神。"
  CUB_general_field_idea: "大规模战场演习"
  CUB_long_training_idea: "广泛的的军事演习"
  CUB_modern_army_idea: "现代古巴军队"
@@ -505,7 +505,7 @@
  CUB_cpc_reforms: "古巴共产党改革"
  CUB_cpc_reforms_desc: "我们的党已不再是社会生活的推动力量，人们不再信任我们和我们的想法。现在是我们共产党进行认真改革的时候了。"
  CUB_cpc_new_people: "吸引青少年"
- CUB_cpc_new_people_desc: "在年轻人和组织的帮助下，我们可以提高知名度。"
+ CUB_cpc_new_people_desc: "在年轻人和组织的帮助下，我们可以提高我们党的支持率。"
  CUB_battle_ideas: "思想斗争"
  CUB_battle_ideas_desc: "思想斗争 - 古巴的政治对抗，在此期间党决定了未来的路线，领导者。现在是结束这场辩论并决定古巴未来的时候了。"
  CUB_castro_in_power: "卡斯特罗继续掌权"
@@ -559,7 +559,7 @@
  CUB_mobilize_youth: "动员青年"
  CUB_mobilize_youth_desc: "青年是我们社会最重要的组成部分，为了古巴的成功未来，我们需要吸引尽可能多的年轻人加入我们的共产党。"
  CUB_increase_farmers: "增加对农民的资助"
- CUB_increase_farmers_desc: "农民是一个重要的组成部分，我们需要增加资金，以保持国家的稳定。"
+ CUB_increase_farmers_desc: "农民是我们经济的重要组成部分，我们需要增加资金，以保持国家稳定。"
  CUB_the_new_education_system: "更新教育制度"
  CUB_nationalize_foreign_buisness: "外国企业国有化"
  CUB_nationalize_foreign_buisness_desc: "外国商业是我们经济的一个大问题，外国政府通过外国商业影响我们的经济。"
@@ -628,7 +628,7 @@
  CUB_the_new_cuba: "新古巴"
  CUB_the_new_cuba_desc: "现在我们已经成为一个自由、民主、美丽的新古巴。"
  CUB_parthership_with_usa: "与美国的伙伴关系"
- CUB_parthership_with_usa_desc: "现在我们已经成为一个民主国家并摆脱了共产主义的蔓延，我们可以与他们发展关系。"
+ CUB_parthership_with_usa_desc: "现在我们已经成为一个民主国家，摆脱了共产主义的感染，我们可以发展与美国的关系。"
  CUB_cooperation_with_taiwan: "与台湾的合作"
  CUB_cooperation_with_taiwan_desc: "台湾拥有高科技，可以帮助我们的国家复兴。"
  CUB_recognize_taiwan_as_china: "承认台湾是唯一的中国"
@@ -1041,7 +1041,7 @@
  CUB_upgrade_old_factories: "升级旧工厂"
  CUB_upgrade_old_factories_desc: "我们有一些工厂状况不好，我们可以重建它们，然后用节省下来的资金建造其他工厂。"
  CUB_guantanamo_que: "终结关塔那摩问题"
- CUB_guantanamo_que_desc: "我们需要结束古巴和美国之间的领土问题，我们需要谈论关塔那摩。"
+ CUB_guantanamo_que_desc: "我们需要结束古巴和美国之间的领土问题，我们需要讨论关塔那摩问题。"
  CUB_guantanamo_question: "解决关塔那摩问题"
  CUB_guantanamo_question_desc: "关塔那摩是我们的领土，目前被美帝国主义占领。我们需要把它带回我们的祖国。"
  CUB_rauls_four_reforms: "经济实现计划"
@@ -1092,3 +1092,5 @@
  cuba.68.d: "封锁仍在继续……"
  cuba.68.a: "哦，不.."
  cuba.10.t: "古巴新宪法"
+ CUB_israel: "反对以色列的侵略"
+ CUB_israel_desc: "以色列对阿拉伯国家和巴勒斯坦人民的政策过于激进。我们谴责以色列领导人的这种行为，并要求以色列改变其外交政策。"
