--- a/localisation/simp_chinese/MD_focus_FRA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_FRA_l_simp_chinese.yml
@@ -747,3 +747,4 @@
  FRA_repealed_the_ordinance_opinion: "废除条例"
  FRA_francophone_solidarity_opinion: "法语国家团结"
  FRA_supported_nepad_development_opinion: "支持非洲发展新伙伴关系"
+ FRA_preparing_launch: "准备发射法国国际空间站"
