--- a/localisation/simp_chinese/MD_internal_factions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_internal_factions_l_simp_chinese.yml
@@ -395,7 +395,7 @@
  has_economic_faction_TT: "经济内部派系"
  has_religious_faction_TT: "宗教内部派系"
  PER_the_military: "伊朗军队"
- PER_intelligence_community: "伊朗情报组织"
+ PER_intelligence_community: "情报协调委员会"
  PER_labour_unions: "伊朗工人团结网络"
  labour_unions_minus_15_tt: "§Y工会§!评价§R-15§!\n"
  labour_unions_plus_10_tt: "§Y工会§!评价§G+15§!\n"
