--- a/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
@@ -1713,7 +1713,7 @@
  very_large_gun_tech_3: "先进超重型坦克炮"
  very_large_gun_tech_3_desc: "通过炮弹的额外电磁加速，超重型坦克炮将能够用其炮弹穿透装甲、建筑物和掩体。"
  small_autocannon_tech: "冷战早期机炮"
- small_autocannon_tech_desc: "口径为20-30mm，通常只需在二战防空炮上进行一些修改即可直接使用。不过，它的工作做得很好。"
+ small_autocannon_tech_desc: "口径为20-30mm，通常只是二战时期的防空炮，略加改装。不过，它的性能很好。"
  small_autocannon_tech_2: "冷战后期机炮"
  small_autocannon_tech_2_desc: "旨在击败步兵和载具的专用自动炮。"
  small_autocannon_tech_3: "现代机炮"
