--- a/localisation/simp_chinese/MD_tooltips_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_tooltips_l_simp_chinese.yml
@@ -420,7 +420,7 @@
  unasur_must_control_tt: "所有南美洲国家联盟成员国必须满足：\n -具有不冲突的发展需求§Y或者§!\n -在同一个阵营中§Y或者§!\n -是巴西的傀儡。\n"
  mercosur_must_control_tt: "所有南方共同市场成员国必须满足：\n -具有不冲突的发展需求§Y或者§!\n -在同一个阵营中§Y或者§!\n -是巴西的傀儡。\n"
  form_unasur_tt: "§Y组建南美洲国家联盟！§!\n"
- form_mercosur_tt: "§Y组建南方共同市场联盟！§!"
+ form_mercosur_tt: "§Y组建南方共同市场联盟！§!\n"
  common_market: "共同市场"
  consumption_economy_TT: "可出口资源：§Y0%§!\n"
  reset_internal_faction_opinion: "将重置所有内部派系看法。\n"
