--- a/localisation/simp_chinese/MD_focus_UKR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_UKR_l_simp_chinese.yml
@@ -335,7 +335,7 @@
  UKR_idea_trained_expanded_general_staff: "改革参谋部"
  UKR_idea_trained_expanded_general_staff_desc: "我们目前的参谋部已经进行了改革。每一个得到职位的人都受过恰当的军事教育，不然就会被解雇。我们要建设一支不受影响的军队。\n"
  UKR_idea_expanding_military_research: "扩大军事研究"
- UKR_idea_foreign_assistance: "火炬援助"
+ UKR_idea_foreign_assistance: "外国援助"
  UKR_every_man_ataman: "每个人 - 黑特曼"
  UKR_russian_dependent_military: "俄罗斯附属军队"
  UKR_military_state_6: "成为废墟的军事部门"
