more setup work

--- a/localisation/english/MD_focus_EU_USoE_l_english.yml
+++ b/localisation/english/MD_focus_EU_USoE_l_english.yml
@@ -57,18 +57,31 @@
  military_not_revolting_tt: "Military Revolt is less than §Y100%§!"
  high_prod_disp_tt: "We currently have §G[?high_prod_state_count]§! high productivity states"
  low_prod_disp_tt: "We currently have §R[?low_prod_state_count]§! low productivity states"
+ good_high_prod_unrest: "High Productivity State Unrest is less than §R50%§!"
+ good_low_prod_unrest: "Low Productivity State Unrest is less than §R50%§!"
+ reduce_low_unrest_by_5: "Reduces Low Productivity State Unrest by §G5%§!"
+ reduce_low_unrest_by_3: "Reduces Low Productivity State Unrest by §G3%§!"
+ increase_high_unrest_by_1: "Increases High Productivity State Unrest by §R1.5%§!"
+ increase_high_unrest_by_2: "Increases High Productivity State Unrest by §R2.5%§!"
 
  ### Decisions / Cateogries ###
  UOE_forming_a_government_category: "Forming a New Government"
  UOE_forming_a_government_category_desc: "Our people have decided, and now that we have merged, we must establish a real government to rule. This will take some time, but we must first establish ourselves culturally, economically, and politically, in order to ensure the safety and stability of our people. We must not take to long, however, or push the people too far, lest there be unforseen consequences....\n\n§RFailing the Form a Government mission will result in the military seizing power over the USoE.\n\nAdditionally, pushing the people or military too far will also result in a military coup of the USoE§!\n\n§YMilitary Revolt:§! §R[?military_revolt|%]§!\n\nMilitary Revolt is the percentage of likelihood that the military is going to seize power from the transitional government, and establish a military government for the people. At 70% or greater, events will start to occur, and at 100%, the coup attempt will occur.\n\nStability, Government Popularity, Protest Strength, Protest Radicalization, and Economic Status will all affect how the military revolt value changes.\n\n§RIF STABILITY REACHES 0, THE MILITARY WILL SEIZE POWER IN AN EMERGENCY MEASURE§!"
  UOE_economic_instability_category: "Economic Instability"
- UOE_economic_instability_category_desc: "Our nation is in a time of economic crisis. Demands for everything have skyrocketed, and with the merger of all our economies into one unified one, buisnesses are in turmoil, and low productivity regions are suffering the worst of the effects. We must work quickly to close the gap between our high and low productivity regions, or else those who got the worst of the deal may choose to leave.\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\nIf we do not develop the poorer regions appropriately, we will anger them, and potentially cause them to exit the United States of Europe. However, spending too much on developing those regions may anger those from areas that are more productive, and cause them to try and leave as well.\n\n§YUnrest in Low Productivity States:§! §R[?low_prod_unrest|%]§!\n\n§YUnrest in High Productivity States:§! §R[?high_prod_unrest|%]§!\n\nEvery month that there are more low productivity states than high ones, low productivity unrest will increase. High productivity state unrest will increase if GDP/C is not increased by §Y2%§! each month. Decisions in the §YEconomic Instability§! decision tab will also be able to adjust those decisions.\n\nLast Month's GPD/C increase: §Y[?gdp_capita_increase|%]§!"
+ UOE_economic_instability_category_desc: "Our nation is in a time of economic crisis. Demands for everything have skyrocketed, and with the merger of all our economies into one unified one, buisnesses are in turmoil, and low productivity regions are suffering the worst of the effects. We must work quickly to close the gap between our high and low productivity regions, or else those who got the worst of the deal may choose to leave.\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\nIf we do not develop the poorer regions appropriately, we will anger them, and potentially cause them to exit the United States of Europe. However, spending too much on developing those regions may anger those from areas that are more productive, and cause them to try and leave as well.\n\n§YUnrest in Low Productivity States:§! §R[?low_prod_unrest|%]§!\n\n§YUnrest in High Productivity States:§! §R[?high_prod_unrest|%]§!\n\nEvery month that there are more low productivity states than high ones, low productivity unrest will increase. High productivity state unrest will increase if GDP/C is not increased by §Y2%§! each month. Decisions in the §YEconomic Instability§! decision tab will increase or decrease unrest as well.\n\nLast Month's GPD/C increase: §Y[?gdp_capita_increase|%]§!"
  form_a_government: "Form a Government"
  form_a_government_desc: "Form a new government for the United States of Europe"
  military_coup_start: "Military Coup"
  military_coup_start_desc: "If the military is not kept happy, there may be a coup..."
  countdown_to_revolution: "The Coup Countdown"
  countdown_to_revolution_desc: "We have a limited time to correct our issues, or else the military will seize power..."
+ assist_low_state_growth: "Fund Low Productivity State Growth"
+ develop_low_prod_network_infra: "Develop Low Productivity State Network Infrastructure"
+ end_economic_crisis: "End Economic Instability"
+ low_prod_states_revolting_now: "Low Productivity State Unrest > 99%"
+ high_prod_states_revolting_now: "High Productivity State Unrest > 99%"
+ low_prod_state_revolt: "Low Productivity State Revolt"
+ high_prod_state_revolt: "High Productivity State Revolt"
 
  ### Focuses ###
  UOE_Constitute_the_United_States_of_Europe: "Constitute the United States of Europe"
