Added Expected Spending Campaign decision

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -75,6 +75,7 @@ v1.10.2
   - Added the "Migration Crisis of Europe" to the game
   - Added the idea "The Casino City for the Rich" fot Monaco
   - Added the "Naval Power of the Continent" mini-mechanic to the power ranking system
+  - Added the "Campaign for Lower Government Spending" decision
 
  Game Rules:
   - Removed the "Disabled AI Missile Alert" game rule
