--- a/localisation/english/MD_decisions_l_english.yml
+++ b/localisation/english/MD_decisions_l_english.yml
@@ -126,6 +126,8 @@
  promote_outlook_decision_support_the_nationalists_desc: "Using informational warfare, we can influence the public opinion about the world situation to view it from a nationalist perspective. However, any such campaign will only be effective for a limited period, as people gradually lose interest.\n\n§YPropaganda Campaign Cost§! Modifier: [?ROOT.modifier@propaganda_campaign_cost_modifier|-2%]\n§YNationalist Propaganda Campaign Cost§! Modifier: [?ROOT.modifier@nationalist_outlook_campaign_cost_modifier|-2%]"
  promote_outlook_decision_support_the_salafists: "§YSalafi§! Indoctrination Campaign"
  promote_outlook_decision_support_the_salafists_desc: "Using informational warfare, promoting ultraconservative clerics and similar, we can influence and radicalize the public opinion about the world situation in favor of Salafism. However, any such campaign will only be effective for a limited period, as people gradually lose interest.\n\n§YPropaganda Campaign Cost§! Modifier: [?ROOT.modifier@propaganda_campaign_cost_modifier|-2%]\n§YSalafi Indoctrination Campaign Cost§! Modifier: [?ROOT.modifier@salafist_outlook_campaign_cost_modifier|-2%]"
+ promote_reduced_spending_campaigns: "Campaign for Lower Government Spending"
+ promote_reduced_spending_campaigns_desc: "The government is in desperate need of cost-cutting measures but the people have a vastly different view of what the money the government receives should be used for. We can nudge the people in the right direction with a well-placed propaganda campaign.\n\n§YPropaganda Campaign Cost§! Modifier: [?ROOT.modifier@propaganda_campaign_cost_modifier|-2%]\n"
 
  ### Repair Canals ###
  rebuild_bosphorus_strait: "Repair the Bosphorus"
